# OpenFlow

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  MULTI_TURN_CHANGES.md  README.md  REFACTOR_AUDIT.md  ROADMAP.md  RUST_REVIEW_TASKS.md  SECURITY.md  UBIQUITOUS_LANGUAGE.md  deny.toml  deny.toml.bak  package.json  recovered_plan.md  typos.toml
crates/agent-workflow-app/: Cargo.toml  package-lock.json
crates/agent-workflow-app/src/: agent_store.rs  backend.rs  canvas_math.rs  credential_store.rs  execution.rs  lib.rs  main.rs  provider_config.rs  settings_store.rs  state.rs  storage.rs  ui.rs
crates/agent-workflow-app/src/tools/: approval.rs  mod.rs  output.rs
crates/agent-workflow-app/src/ui/: canvas.rs  inspector.rs  mod.rs  nav.rs  settings.rs  theme.rs  widgets.rs
crates/agent-workflow-app/tests/: live_workflow.rs  workflow_acceptance.rs
crates/agent-workflow-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/agent-workflow-desktop/src-tauri/src/: lib.rs  main.rs
crates/app-backend/: Cargo.toml
crates/app-backend/src/: backend.rs  canvas_math.rs  lib.rs  storage.rs
crates/app-backend/src/tools/: runner.rs
crates/app-backend/tests/: workflow_acceptance.rs
crates/desktop/: AGENTS.md  Cargo.toml  build.rs  package-lock.json  package.json  tauri.conf.json
crates/desktop/e2e/: fixtures.ts  fixtures.visual.ts  ipcMocks.ts  package-lock.json  package.json  playwright.config.ts
crates/desktop/e2e/fixtures/: multiSegmentChat.ts
crates/desktop/e2e/tests/: app.spec.ts  chat-segments.visual.spec.ts  settings-providers.spec.ts
crates/desktop/icons/: icon.icns
crates/desktop/src/: app_lifecycle.rs  ipc_types.rs  lib.rs  main.rs  run_event_bridge.rs  run_notifications.rs  run_sleep_guard.rs  schedule_events.rs  search_sidecar.rs  terminal_events.rs
crates/desktop/src-tauri/: Cargo.toml
crates/desktop/src-tauri/src/: lib.rs  main.rs
crates/desktop/src-tauri/tests/: desktop_commands.rs
crates/desktop/src/adapters/: inbound.rs  outbound.rs
crates/desktop/src/commands/: agent.rs  authoring.rs  bootstrap.rs  git.rs  mod.rs  project.rs  run.rs  settings.rs  terminal.rs  workflow.rs
crates/desktop/src/ports/: inbound.rs  outbound.rs
crates/desktop/tests/: desktop_commands.rs
crates/engine/: AGENTS.md  Cargo.toml  clippy.toml
crates/engine/src/: lib.rs  model_context.rs
crates/engine/src/conversation/: mod.rs
crates/engine/src/execution/: artifacts.rs  completion_protocol.rs  interactive_engine.rs  mod.rs  node_invocation.rs  output_repair.rs  retry.rs  subagent_runtime.rs  subagents.rs  telemetry.rs  tool_results.rs  workflow_runner.rs
crates/engine/src/graph/: callable_agent.rs  mod.rs  runtime_config.rs  validation.rs  workflow.rs
crates/engine/src/ports/: inbound.rs  mod.rs  outbound.rs
crates/engine/src/template/: builtins.rs  mod.rs
crates/engine/src/tools/: bash_policy.rs  config.rs  edit_batch.rs  file_change.rs  mod.rs  read_record.rs  relativize_paths.rs
crates/engine/tests/snapshots/: public_api.txt
crates/openai-client/: Cargo.toml
crates/openai-client/src/: lib.rs
crates/orchestration/: AGENTS.md  Cargo.toml
crates/orchestration/resources/: context_window_sizes.json
crates/orchestration/src/: agent.rs  agent_library.rs  agent_store.rs  api.rs  backend.rs  diagnostics.rs  error.rs  execution.rs  flow_store.rs  lib.rs  project_registry.rs  project_store.rs  provider_config.rs  run_coordinator.rs  settings_facade.rs  settings_store.rs  skill_store.rs  state.rs  storage.rs  template_store.rs
crates/orchestration/src/adapters/: inbound.rs  mod.rs  outbound.rs
crates/orchestration/src/agent/: library.rs  mod.rs  ports.rs
crates/orchestration/src/backend/: agents.rs  authoring.rs  helpers.rs  mod.rs  projects.rs  runs.rs  schedule.rs  settings.rs  terminal.rs  tests.rs  workflow.rs
crates/orchestration/src/execution/: drive.rs  events.rs  headless.rs  mod.rs  subagents.rs  tests.rs
crates/orchestration/src/git/: mod.rs
crates/orchestration/src/greeting/: model.rs
crates/orchestration/src/incident/: from_event.rs  from_event_tests.rs  mod.rs  model.rs  model_tests.rs  ports.rs  recorder.rs  recorder_tests.rs
crates/orchestration/src/lsp/: diagnostics.rs  mod.rs  writethrough.rs
crates/orchestration/src/ports/: inbound.rs  outbound.rs
crates/orchestration/src/project/: domain.rs  file_refs.rs  mod.rs  ports.rs  registry.rs
crates/orchestration/src/run/: coordinator.rs  coordinator_tests.rs  mod.rs  persistence.rs  ports.rs  prep.rs  reasoning_defaults.rs  state.rs
crates/orchestration/src/schedule/: evaluator.rs  mod.rs  model.rs  preset.rs  service.rs
crates/orchestration/src/settings/: codex_login.rs  context_window.rs  facade.rs  mod.rs  model.rs  ports.rs  provider.rs
crates/orchestration/src/skill/: store.rs
crates/orchestration/src/terminal/: mod.rs
crates/orchestration/src/tool/: blocking_ops.rs  cache.rs  dispatch.rs  errors.rs  grep.rs  hooks.rs  mod.rs  output.rs  ports.rs  registry.rs  retry.rs  runner.rs  web_search.rs
crates/orchestration/src/tools/: approval.rs  mod.rs  registry.rs  runner.rs
crates/orchestration/src/workflow/: catalog.rs  mod.rs  ports.rs
crates/orchestration/tests/: live_workflow.rs  mock_ports.rs  read_forward_ab.rs  read_forward_live.rs  workflow_acceptance.rs  workflow_authoring_acceptance.rs  workflow_e2e.rs
crates/orchestration/tests/support/: mock_ai_stack.rs  mod.rs  run_harness.rs  workflows.rs
crates/providers/: AGENTS.md  Cargo.toml
crates/providers/src/: anthropic.rs  anthropic_tests.rs  auth.rs  aws_runtime.rs  bedrock.rs  bedrock_errors.rs  bedrock_models.rs  client.rs  codex.rs  http_errors.rs  lib.rs  mapping.rs  model_debug.rs  openai_compat.rs  prompt_cache.rs  spec.rs  sse.rs
crates/providers/tests/: mock_factory.rs  rig_anthropic.rs  rig_bedrock.rs  rig_codex.rs  rig_openai_compat.rs
crates/workflow-core/: Cargo.toml
crates/workflow-core/src/: interactive.rs  lib.rs  model.rs  ports.rs  runner.rs  template.rs  template_store.rs  tools.rs  validation.rs
docs/: CONTEXT.md  (+10 more)
(+664 files in other folders)
