[workspace]
members = [
    "crates/workflow-core",
    "crates/ai",
    "crates/app-backend",
    "crates/agent-workflow-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
description = "Desktop app and core engine for composing and running agentic workflows"
license = "MIT"
readme = "README.md"
repository = "https://example.invalid/step-through-agentic-workflow"
keywords = ["agent", "workflow", "desktop", "openai", "rust"]
categories = ["development-tools", "gui"]

[workspace.dependencies]
async-trait = "0.1.89"
dirs = "6.0.0"
futures = "0.3.32"
parking_lot = "0.12.5"
reqwest = { version = "0.13.3", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
thiserror = "2.0.18"
tauri = "2.0"
tauri-build = { version = "2.0", features = [] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
wiremock = "0.6.5"

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
