[package]
name = "agent-workflow-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
eframe.workspace = true
egui.workspace = true
egui-phosphor = "0.12.0"
openai-client = { path = "../openai-client" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
workflow-core = { path = "../workflow-core" }

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
