[package]
name = "agent-workflow-app"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dirs.workspace = true
eframe.workspace = true
egui.workspace = true
egui-phosphor = "0.12.0"
openai-client = { path = "../openai-client" }
serde.workspace = true
glob = "0.3.2"
parking_lot.workspace = true
regex = "1.11.1"
reqwest.workspace = true
walkdir = "2.5.0"
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
workflow-core = { path = "../workflow-core" }

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true

[lints]
workspace = true
