[package]
name = "desktop"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
orchestration = { path = "../orchestration", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
 tauri.workspace = true
 tauri-plugin-dialog = "2"
 tauri-plugin-shell = "2"
 thiserror.workspace = true
 tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
