[package]
name = "desktop"
version = "0.1.9"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
e2e-testing = ["dep:tauri-plugin-playwright"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
keepawake = "0.6.0"
log = "0.4"
orchestration = { path = "../orchestration", version = "0.1.3" }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-playwright = { version = "0.4", optional = true }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
