[package]
name = "engine"
version = "0.1.9"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "engine"

[dependencies]
async-trait.workspace = true
futures.workspace = true
jsonschema.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["sync", "test-util"] }

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
