[package]
name = "openai-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
workflow-core = { path = "../workflow-core" }

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
