[package]
name = "openai-client"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
workflow-core = { path = "../workflow-core" }

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true

[lints]
workspace = true
