[package]
name = "orchestration"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "orchestration"

[dependencies]
dirs.workspace = true
providers = { path = "../providers", version = "0.1.0" }
serde.workspace = true
glob = "0.3.2"
parking_lot.workspace = true
keyring.workspace = true
regex = "1.11.1"
reqwest.workspace = true
walkdir = "2.5.0"
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
domain = { path = "../domain", version = "0.1.0" }

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true

[lints]
workspace = true
