[package]
name = "orchestration"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "orchestration"

[features]
default = ["bedrock"]
bedrock = ["providers/bedrock"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
dirs.workspace = true
log = "0.4"
providers = { path = "../providers", version = "0.1.0" }
serde.workspace = true
glob = "0.3.2"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
parking_lot.workspace = true
portable-pty.workspace = true
regex = "1.11.1"
similar = "2.7.0"
unicode-normalization = "0.1.24"
reqwest.workspace = true
walkdir = "2.5.0"
serde_json.workspace = true
sha2.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
twox-hash = "2.1.0"
tokio-util.workspace = true
uuid.workspace = true
engine = { path = "../engine", version = "0.1.0" }
rmcp.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["process", "signal"] }

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true

[lints]
workspace = true
