[package]
name = "providers"
version = "0.1.9"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "providers"

[features]
default = ["bedrock"]
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrock", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types", "dep:dirs"]

[dependencies]
async-trait.workspace = true
bytes.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonrepair-rs.workspace = true
engine = { path = "../engine", version = "0.1.1" }
futures.workspace = true
tokio = { workspace = true, features = ["time"] }
aws-config = { workspace = true, optional = true }
aws-sdk-bedrock = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { workspace = true, optional = true }
aws-smithy-types = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }

[dev-dependencies]
bytes.workspace = true
tokio.workspace = true
wiremock.workspace = true

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
