[package]
name = "providers"
version = "0.1.14"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "providers"

[features]
default = ["bedrock"]
bedrock = [
    "dep:rig-bedrock",
    "dep:aws-config",
    "dep:aws-sdk-bedrock",
    "dep:aws-sdk-bedrockruntime",
    "dep:dirs",
]

[dependencies]
rig-core = { workspace = true }
rig-bedrock = { workspace = true, optional = true }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonrepair-rs.workspace = true
engine = { path = "../engine", version = "0.1.5" }
futures.workspace = true
tokio = { workspace = true, features = ["time", "process"] }
aws-config = { workspace = true, optional = true }
aws-sdk-bedrock = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
