[package]
name = "providers"
version = "0.1.18"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "providers"

[features]
# Off by default so local engine/providers/orchestration loops skip the AWS SDK.
# Desktop enables `bedrock` for the shipped app; CI runs a Bedrock-featured providers pass.
default = []
bedrock = [
    "dep:rig-bedrock",
    "dep:aws-config",
    "dep:aws-sdk-bedrock",
    "dep:aws-sdk-bedrockruntime",
    "dep:dirs",
]

[dependencies]
rig-core = { workspace = true }
rig-bedrock = { workspace = true, optional = true }
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
getrandom.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
jsonrepair-rs.workspace = true
engine = { path = "../engine", version = "0.1.8" }
futures.workspace = true
tokio = { workspace = true, features = ["time", "process", "net", "io-util"] }
thiserror.workspace = true
aws-config = { workspace = true, optional = true }
aws-sdk-bedrock = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
wiremock.workspace = true

[lints.rust]
warnings = "deny"
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
