[package]
name = "workflow-core"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
async-trait.workspace = true
dirs = "5.0"
futures.workspace = true
log = "0.4"
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

 [dev-dependencies]
 tempfile = "3"
 tokio.workspace = true

[lints]
workspace = true
