[package]
name = "desktop"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "agent_workflow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
app-backend = { package = "orchestration", path = "../../orchestration", version = "0.1.0" }
async-trait.workspace = true
serde.workspace = true
 tauri.workspace = true
 tauri-plugin-shell = "2"
 thiserror.workspace = true
 tokio.workspace = true
workflow-core = { package = "domain", path = "../../domain", version = "0.1.0" }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
